syntax = "proto3";

package pb;
option go_package = "./pb";
import "trade_config.proto";

message Exchange {
    uint64 Exchange = 1;
    string Name = 2;
}

message ExchangeResponse {
    repeated Exchange exchange = 1;
}

message ListExchangeRequest {}

service ExchangeService {
    rpc ListExchange(ListExchangeRequest) returns (ExchangeResponse) {} 
    rpc ListTradeConfig(ListTradeConfigRequest) returns (TradeConfigResponse) {}
    rpc CreateTradeConfig(CreateTradeConfigRequest) returns (TradeConfigResponse) {}
}